# chat-hole

./: .gitignore  README.md  install.ps1  lan_chat.py  pyproject.toml
lan_chat/: __init__.py  cli.py  client.py  config.py  discovery.py  protocol.py  server.py  terminal.py  utils.py
tests/: test_client_contacts.py  test_server_contacts.py  test_terminal_ui.py
